Add an alert panel

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   <div id="button" class="button raised blue">
     <div class="center label">Check</div>
   </div>
-  <div id="toast">
+  <div id="toast"></div>
+  <div id="alert" class="panel">
+    <p>You've finished and obtained ## points.</p>
+    <p>Was that hard?</p>
+    <div id="playAgain" class="button raised blue">
+      <div class="center label">Play again</div>
+    </div>
   </div>
 </body>
 </html>
