Change button color

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <div id="pictureWrapper">
       <img id="picturePanel" class="panel"></img>
   </div>
-  <div id="button" class="button raised blue">
+  <div id="button" class="button raised gray">
     <div class="center label">Check</div>
   </div>
   <div id="toast"></div>
