--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="alert" class="panel">
     <p>You've finished and obtained ## points.</p>
     <p>Was that hard?</p>
-    <div id="playAgain" class="button raised blue">
+    <div id="playAgain" class="button raised blue" onclick="resetGame()">
       <div class="center label">Play again</div>
     </div>
   </div>
