--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="description" content="">
   <meta name="keywords" content="">
   <meta name="author" content="">
+  <title>Where is this?</title>
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
-  <title></title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -25,7 +25,7 @@
   </div>
   <div id="toast"></div>
   <div id="alert" class="panel">
-    <p>You've finished and obtained ## points.</p>
+    <p id="score">You've finished and obtained ## points.</p>
     <p>Was that hard?</p>
     <div id="playAgain" class="button raised blue" onclick="resetGame()">
       <div class="center label">Play again</div>
